--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@datalust/winston-seq": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nacos": "^2.6.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "winston": "^3.17.0"
   }
 }
